# ProceduralNarrativeGenerator

./: CMakeLists.txt  README.md  build.py  generated_stories.txt
includes/: App.h  Character.h  NarrativeEngine.h  Story.h  Theme.h  ThemeData.h
sources/: App.cpp  App.h  Character.h  NarrativeEngine.cpp  Story.cpp  StoryGenerator.cpp  StoryGenerator.h  main.cpp
